Fix some broken css selectors

--- a/assets/scss/layout/page.scss
+++ b/assets/scss/layout/page.scss
@@ -11,6 +11,6 @@
 }
 
 .limit-width,
-.col.limit-width {
+.v-col.limit-width {
   max-width: 1220px;
 }
